<resources>
    <string name="app_name">MAD_Project01</string>
    <string name="background">bg</string>
    <string name="logo">logo</string>
    <string name="pageName">text</string>
    <string name="to_be_reviewed">lable</string>
    <string name="itempic1">itemPic1</string>
    <string name="back">back</string>
    <string name="cartbtn">btn</string>
    <string name="itempic2">itemPic2</string>
    <string name="toshiba_electronic_device_storage"><![CDATA[Toshiba Electronic Device & Storage]]></string>
    <string name="close1">Close</string>
    <string name="close2">Close</string>
    <string name="itemName">Spotlight Highlight</string>
    <string name="naierdi_1_24pcs_self_adhesive_furniture_leg_feet_rug_felt_pads_anti_slip_mat_bumper_damper_for_chair_table_protector_hardware">NAIERDI 1-24PCS Self Adhesive Furniture Leg Feet Rug Felt Pads Anti Slip Mat Bumper Damper For Chair Table Protector Hardware</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="rate2">Rate</string>
    <string name="rohwxy_poly_uv_gel_for_manicure_30_15ml_nail_uv_gel_for_extension_color_nail_gel_for_nails_art_painting_gel_nail_art_enamel">ROHWXY Poly UV Gel For Manicure 30/15ML Nail UV Gel For Extension Color Nail Gel For Nails Art Painting Gel Nail Art Enamel</string>
    <string name="share">btnshare</string>
    <string name="homeBTN">btnHome</string>
    <string name="account">Account</string>
    <string name="Sharebtn">btnShare</string>
    <string name="profileBtn">btnProfile</string>
    <string name="close3">Close</string>
    <string name="rate4">Rate</string>
    <string name="ToBeReviewed">To Be Reviewed</string>
    <string name="cross_infinity_with_every_steps_meet_eternity_in_every_second">Cross infinity with every steps meet eternity in every second</string>
    <string name="barLine">-----------------------------------</string>
    <string name="Systemlogo">Logo</string>
    <string name="how_accurate_the_product_discription">How accurate the product discription?</string>
    <string name="star5">star5</string>
    <string name="star4">star4</string>
    <string name="star3">star3</string>
    <string name="star2">star2</string>
    <string name="star1">star1</string>
    <string name="TypeText">....................................................................................................................................................................................................................................................................................................................................</string>
    <string name="post">Post</string>
    <string name="reviewTxt">Review</string>
    <string name="to_be_reviewedBTN">To Be Reviewed</string>
    <string name="thank_you_for_your_rate">Thank you for Your Rate</string>
    <string name="rate">Rate</string>
    <string name="thank_you_for_your_rate1">Thank you for your Rate</string>
    <string name="rate1">Rate</string>
    <string name="thank_you_for_your_rate2">Thank you for your Rate</string>
    <string name="deletebtn">deleteBtn</string>
    <string name="deletebtn2">deleteBtn2</string>
    <string name="complete_rate">Complete Rate</string>
    <string name="starview3">StarView3</string>
    <string name="starview4">StarView4</string>
    <string name="starview11">StarView11</string>
    <string name="starview9">StarView9</string>
    <string name="starview10">StarView10</string>
    <string name="starview15">StarView15</string>
    <string name="starview14">StarView14</string>
    <string name="starview1">StarView1</string>
    <string name="starview12">StarView12</string>
    <string name="starview13">StarView13</string>
    <string name="starview8">StarView8</string>
    <string name="starview7">StarView7</string>
    <string name="starview6">StarView6</string>
    <string name="starview5">StarView5</string>
    <string name="starview2">StarView2</string>

    <string name="enter_your_feedback">Enter Your Feedback</string>
    <string name="very_disatisfied">Very Disatisfied</string>
    <string name="addReview">Add Review</string>
    <string name="Rate">Rate</string>
    <string name="close">Close</string>
    <string name="closeBtn">Close</string>
    <string name="RateBtn">Rate</string>
    <string name="itemname">ItemName</string>
    <string name="description">Description</string>
    <string name="Itemname">Itemname</string>

</resources>