<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#C5C5C5"
    tools:context=".ReviewProject">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="224dp"
        android:layout_height="225dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/dec3"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="418dp"
        android:layout_height="66dp"
        android:background="#C5C5C5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/topicText"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:text="@string/ToBeReviewed"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="BackArrow"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/topicText"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.361"
        app:srcCompat="@drawable/right_arrowiconfinal"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="@dimen/alpha"
        android:background="@null"
        android:contentDescription="@string/homeBTN"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/home_button_for_interface_btn__1_" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="36dp"
        android:layout_height="15dp"
        android:text="@string/home"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home" />

    <ImageButton
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="@dimen/alpha"
        android:background="@null"
        android:contentDescription="@string/cartbtn"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/shopping_cartbtn" />

    <TextView
        android:id="@+id/cartText"
        android:layout_width="36dp"
        android:layout_height="15dp"
        android:text="@string/cart"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toEndOf="@+id/homeText"
        app:layout_constraintTop_toBottomOf="@+id/cart" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="41dp"
        android:layout_height="46dp"
        android:alpha="@dimen/alpha"
        android:contentDescription="@string/profileBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toEndOf="@+id/cart"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/user_btn" />

    <TextView
        android:id="@+id/profileText"
        android:layout_width="60dp"
        android:layout_height="16dp"
        android:text="@string/account"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/cartText"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="391dp"
        android:layout_height="473dp"
        app:layout_constraintBottom_toTopOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeText" />


</androidx.constraintlayout.widget.ConstraintLayout>