<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    android:backgroundTint="#FBFBFB"
    tools:context=".AddRate">


    <ImageButton
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="52dp"
        android:alpha="@dimen/alpha"
        android:background="@null"
        android:contentDescription="@string/cartbtn"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/itemDis1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:srcCompat="@drawable/shopping_cartbtn" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:alpha="@dimen/alpha"
        android:background="@null"
        android:contentDescription="@string/homeBTN"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/itemDis1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_button_for_interface_btn__1_" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="41dp"
        android:layout_height="46dp"
        android:layout_marginBottom="52dp"
        android:alpha="@dimen/alpha"
        android:contentDescription="@string/profileBtn"
        app:layout_constraintBottom_toTopOf="@+id/itemDis1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/cart"
        app:srcCompat="@drawable/user_btn" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/itemDis1"
        android:layout_width="260dp"
        android:layout_height="135dp"
        android:layout_marginEnd="4dp"
        android:background="#C5C5C5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/itemImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/ProductDis1"
        android:layout_width="250dp"
        android:layout_height="72dp"
        android:layout_marginEnd="4dp"
        android:text="@string/naierdi_1_24pcs_self_adhesive_furniture_leg_feet_rug_felt_pads_anti_slip_mat_bumper_damper_for_chair_table_protector_hardware"
        android:textAlignment="viewStart"
        android:textColor="#424242"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemDis1"
        app:layout_constraintEnd_toEndOf="@+id/itemDis1"
        app:layout_constraintTop_toBottomOf="@+id/itemName1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="95dp"
        android:layout_height="71dp"
        android:contentDescription="@string/itempic1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/itemName1"
        android:layout_width="254dp"
        android:layout_height="53dp"
        android:text="@string/toshiba_electronic_device_storage"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/itemDis1"
        app:layout_constraintEnd_toEndOf="@+id/itemDis1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/itemDis1"
        app:layout_constraintTop_toTopOf="@+id/itemDis1"
        app:layout_constraintVertical_bias="0.048" />


    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/how_accurate_the_product_discription"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDis1"
        app:layout_constraintVertical_bias="0.091" />

    <ImageView
        android:id="@+id/bg"
        android:layout_width="224dp"
        android:layout_height="225dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/dec3"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/Post"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="#4CAF50"
        android:backgroundTint="#4CAF50"
        android:padding="5dp"
        android:text="@string/post"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RatingStar"
        app:layout_constraintVertical_bias="0.338"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="337dp"
        android:layout_height="58dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_your_feedback"

        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLength="100"
        android:textColorHint="@color/Feedback_TextColour_Hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.333" />

    <RatingBar
        android:id="@+id/RatingStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_horizontal"
        android:numStars="5"
        android:progressBackgroundTint="#90C5CC"
        android:progressTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.026"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/RateCount"
        android:layout_width="338dp"
        android:layout_height="39dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RatingStar"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/button2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="34dp"

        android:background="@drawable/right_arrow2"
        android:onClick="BackBtn"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/addReview"
        android:textColor="@color/black"
        android:textSize="22sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>