<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardMaxElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Itemname"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/RateBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:background="#FFB521"
                android:text="@string/RateBtn"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <Button
                android:id="@+id/CloseBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_marginEnd="110dp"
                android:background="#5B5B5B"
                android:text="@string/closeBtn"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/ShareBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/share"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>